# bfxml

./: CMakeLists.txt  README.md
cmake/: config.h.in
examples/: CMakeLists.txt  helper.c  selftest.c  selftest.xml
examples/decoder/: CMakeLists.txt  benchmark.c  selftest.c
include/: bfxml.h  export.h
include/bfxml/: core.h  decoder.h  xml.h
src/: decode.c  decoder.c  encode.c  encoder.c  xml.c
